--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,30 +9,22 @@
 <link rel="stylesheet" href="css/style.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
-  <script src="js/main.js"></script>
 
 <header class="header">
   <div class="logo">Hotelify</div>
   <nav>
     <a href="index.html">Home</a>
     <a href="hotels.html">Hotels</a>
-    <a href="destinations.html">Destinations</a>
     <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
   </nav>
 </header>
 
 <section class="hero">
-  <h1>Find the Best Hotel Deals Worldwide</h1>
-  <p>Compare prices & book safely with Agoda</p>
-
-  <!-- Agoda Search -->
-  <a class="btn track" 
-     href="https://www.agoda.com/?cid=YOUR_AGODA_ID" 
-     target="_blank">
-     Search Hotels
-  </a>
+  <h1>Discover the Best Hotel Deals Worldwide</h1>
+  <p>Book trusted hotels with Agoda & save more</p>
+  <a class="btn track" href="https://www.agoda.com/?cid=YOUR_AGODA_ID" target="_blank">Search Hotels</a>
 </section>
 
 <section class="features">
@@ -40,11 +33,37 @@
   <div class="card animate">🌍 Worldwide Coverage</div>
 </section>
 
+<section class="grid">
+  <div class="hotel-card animate">
+    <img src="https://images.unsplash.com/photo-1566073771259-6a8506099945">
+    <h3>Luxury Beach Resort</h3>
+    <p>5-star beachfront hotel</p>
+    <a class="btn-small track" href="https://www.agoda.com/?cid=YOUR_AGODA_ID" target="_blank">View on Agoda</a>
+  </div>
+
+  <div class="hotel-card animate">
+    <img src="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267">
+    <h3>City Center Hotel</h3>
+    <p>Perfect location for business & leisure</p>
+    <a class="btn-small track" href="https://www.agoda.com/?cid=YOUR_AGODA_ID" target="_blank">Check Price</a>
+  </div>
+
+  <div class="hotel-card animate">
+    <img src="https://images.unsplash.com/photo-1542314831-068cd1dbfeeb">
+    <h3>Budget Friendly Stay</h3>
+    <p>Comfortable rooms at affordable prices</p>
+    <a class="btn-small track" href="https://www.agoda.com/?cid=YOUR_AGODA_ID" target="_blank">Book Now</a>
+  </div>
+</section>
+
+<div class="cta">
+  <h2>Ready to Travel?</h2>
+  <p>Book your perfect hotel today and enjoy exclusive discounts.</p>
+  <a class="btn track" href="https://www.agoda.com/?cid=YOUR_AGODA_ID" target="_blank">Find Best Hotel Deals</a>
+</div>
+
 <footer>
-  © 2025 Hotelify |
-  <a href="privacy.html">Privacy</a> |
-  <a href="terms.html">Terms</a> |
-  <a href="disclosure.html">Disclosure</a>
+  © 2025 Hotelify | <a href="privacy.html">Privacy</a> | <a href="terms.html">Terms</a> | <a href="disclosure.html">Affiliate Disclosure</a>
 </footer>
 
 <script src="js/main.js"></script>
