--- a/hotels.html
+++ b/hotels.html
@@ -1,19 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Hotels | Hotelify</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<header class="header">
+  <div class="logo">Hotelify</div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="hotels.html">Hotels</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
+
+<section class="page-title">
+  <h2>Top Agoda Hotel Picks</h2>
+</section>
+
 <section class="grid">
   <div class="hotel-card animate">
     <img src="https://images.unsplash.com/photo-1566073771259-6a8506099945">
     <h3>Luxury Beach Resort</h3>
     <p>5-star beachfront experience</p>
-    <a class="btn-small track"
-       href="https://www.agoda.com/?cid=YOUR_AGODA_ID"
-       target="_blank">View on Agoda</a>
+    <a class="btn-small track" href="https://www.agoda.com/?cid=YOUR_AGODA_ID" target="_blank">View on Agoda</a>
   </div>
 
   <div class="hotel-card animate">
     <img src="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267">
-    <h3>City Hotel</h3>
-    <p>Perfect city location</p>
-    <a class="btn-small track"
-       href="https://www.agoda.com/?cid=YOUR_AGODA_ID"
-       target="_blank">Check Price</a>
+    <h3>City Center Hotel</h3>
+    <p>Perfect for travelers</p>
+    <a class="btn-small track" href="https://www.agoda.com/?cid=YOUR_AGODA_ID" target="_blank">Check Price</a>
   </div>
 </section>
+
+<footer>
+  Affiliate Disclosure: Hotelify earns commission from Agoda.
+</footer>
+
+<script src="js/main.js"></script>
+</body>
+</html>
