--- a/city-manila.html
+++ b/city-manila.html
@@ -1,6 +1,38 @@
-<h2>Best Hotels in Manila</h2>
-<p>Discover affordable and luxury hotels in Manila with Agoda.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Hotels in Manila | Hotelify</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="../css/style.css">
+</head>
+<body>
+<header class="header">
+  <div class="logo">Hotelify</div>
+  <nav>
+    <a href="../index.html">Home</a>
+    <a href="../hotels.html">Hotels</a>
+    <a href="../about.html">About</a>
+    <a href="../contact.html">Contact</a>
+  </nav>
+</header>
 
-<a class="btn track"
-   href="https://www.agoda.com/city/manila-ph.html?cid=YOUR_AGODA_ID"
-   target="_blank">View Manila Hotels</a>
+<section class="city-hero" style="background-image:url('https://images.unsplash.com/photo-1549893075-4d59f7ff4c21');">
+  <div>
+    <h1>Best Hotels in Manila</h1>
+    <p>Find affordable and luxury hotels in Manila with Agoda</p>
+    <a class="btn track" href="https://www.agoda.com/city/manila-ph.html?cid=YOUR_AGODA_ID" target="_blank">View Hotels</a>
+  </div>
+</section>
+
+<div class="agoda-widget">
+  <iframe src="https://www.agoda.com/pages/agoda/default/DestinationSearch.aspx?city=17193&cid=YOUR_AGODA_ID" width="100%" height="420" frameborder="0" scrolling="no"></iframe>
+</div>
+
+<footer>
+  © 2025 Hotelify | <a href="../disclosure.html">Affiliate Disclosure</a>
+</footer>
+
+<script src="../js/main.js"></script>
+</body>
+</html>
