--- a/city-tokyo.html
+++ b/city-tokyo.html
@@ -1,6 +1,10 @@
-<h2>Best Hotels in Tokyo</h2>
-<p>Find hotels near Shibuya, Shinjuku, and Tokyo Station.</p>
-
-<a class="btn track"
-   href="https://www.agoda.com/city/tokyo-jp.html?cid=YOUR_AGODA_ID"
-   target="_blank">View Tokyo Hotels</a>
+<section class="city-hero" style="background-image:url('https://images.unsplash.com/photo-1515110196815-75f91e6c6608');">
+  <div>
+    <h1>Best Hotels in Tokyo</h1>
+    <p>Find affordable and luxury hotels in Tokyo with Agoda</p>
+    <a class="btn track" href="https://www.agoda.com/city/tokyo-jp.html?cid=YOUR_AGODA_ID" target="_blank">View Hotels</a>
+  </div>
+</section>
+<div class="agoda-widget">
+  <iframe src="https://www.agoda.com/pages/agoda/default/DestinationSearch.aspx?city=9395&cid=YOUR_AGODA_ID" width="100%" height="420" frameborder="0" scrolling="no"></iframe>
+</div>
