--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +8,7 @@
 <link rel="stylesheet" href="css/style.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
 <header class="header">
@@ -21,41 +21,45 @@
   </nav>
 </header>
 
-<section class="hero">
+<!-- HERO -->
+<section class="hero" style="background-image: url('https://images.unsplash.com/photo-1501117716987-c8e1ecb210c9?auto=format&fit=crop&w=1650&q=80');">
   <h1>Discover the Best Hotel Deals Worldwide</h1>
   <p>Book trusted hotels with Agoda & save more</p>
   <a class="btn track" href="https://www.agoda.com/?cid=YOUR_AGODA_ID" target="_blank">Search Hotels</a>
 </section>
 
+<!-- FEATURES -->
 <section class="features">
   <div class="card animate">💰 Best Price Deals</div>
   <div class="card animate">🏨 Verified Hotels</div>
   <div class="card animate">🌍 Worldwide Coverage</div>
 </section>
 
+<!-- HOTEL CARDS -->
 <section class="grid">
   <div class="hotel-card animate">
-    <img src="https://images.unsplash.com/photo-1566073771259-6a8506099945">
+    <img src="https://images.unsplash.com/photo-1566073771259-6a8506099945?auto=format&fit=crop&w=800&q=80" alt="Luxury Beach Resort">
     <h3>Luxury Beach Resort</h3>
     <p>5-star beachfront hotel</p>
     <a class="btn-small track" href="https://www.agoda.com/?cid=YOUR_AGODA_ID" target="_blank">View on Agoda</a>
   </div>
 
   <div class="hotel-card animate">
-    <img src="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267">
+    <img src="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267?auto=format&fit=crop&w=800&q=80" alt="City Center Hotel">
     <h3>City Center Hotel</h3>
     <p>Perfect location for business & leisure</p>
     <a class="btn-small track" href="https://www.agoda.com/?cid=YOUR_AGODA_ID" target="_blank">Check Price</a>
   </div>
 
   <div class="hotel-card animate">
-    <img src="https://images.unsplash.com/photo-1542314831-068cd1dbfeeb">
+    <img src="https://images.unsplash.com/photo-1542314831-068cd1dbfeeb?auto=format&fit=crop&w=800&q=80" alt="Budget Friendly Stay">
     <h3>Budget Friendly Stay</h3>
     <p>Comfortable rooms at affordable prices</p>
     <a class="btn-small track" href="https://www.agoda.com/?cid=YOUR_AGODA_ID" target="_blank">Book Now</a>
   </div>
 </section>
 
+<!-- CTA -->
 <div class="cta">
   <h2>Ready to Travel?</h2>
   <p>Book your perfect hotel today and enjoy exclusive discounts.</p>
