--- a/index.html
+++ b/index.html
@@ -1,75 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Hotelify | Best Agoda Hotel Deals</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Hotelify helps you find the best Agoda hotel deals worldwide.">
-<link rel="stylesheet" href="css/style.css">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Hotelify – Best Hotel Deals</title>
+
+  <!-- Tailwind CSS CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- AOS Animation Library -->
+  <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
 </head>
+<body class="bg-gray-100 text-gray-800">
 
-<body>
+  <!-- Navbar -->
+  <header class="bg-white shadow-md fixed w-full z-20 top-0">
+    <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+      <div class="text-2xl font-bold text-indigo-600">Hotelify</div>
+      <nav class="space-x-6 hidden md:flex">
+        <a href="#home" class="hover:text-indigo-600">Home</a>
+        <a href="#hotels" class="hover:text-indigo-600">Hotels</a>
+        <a href="#about" class="hover:text-indigo-600">About</a>
+        <a href="#contact" class="hover:text-indigo-600">Contact</a>
+      </nav>
 
-<header class="header">
-  <div class="logo">Hotelify</div>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="hotels.html">Hotels</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
+      <!-- Mobile Menu Toggle -->
+      <button class="md:hidden mobile-menu-button">
+        <span class="text-2xl">&#9776;</span>
+      </button>
+    </div>
+  </header>
 
-<!-- HERO -->
-<section class="hero" style="background-image: url('https://images.unsplash.com/photo-1501117716987-c8e1ecb210c9?auto=format&fit=crop&w=1650&q=80');">
-  <h1>Discover the Best Hotel Deals Worldwide</h1>
-  <p>Book trusted hotels with Agoda & save more</p>
-  <a class="btn track" href="https://www.agoda.com/?cid=YOUR_AGODA_ID" target="_blank">Search Hotels</a>
-</section>
-
-<!-- FEATURES -->
-<section class="features">
-  <div class="card animate">💰 Best Price Deals</div>
-  <div class="card animate">🏨 Verified Hotels</div>
-  <div class="card animate">🌍 Worldwide Coverage</div>
-</section>
-
-<!-- HOTEL CARDS -->
-<section class="grid">
-  <div class="hotel-card animate">
-    <img src="https://images.unsplash.com/photo-1566073771259-6a8506099945?auto=format&fit=crop&w=800&q=80" alt="Luxury Beach Resort">
-    <h3>Luxury Beach Resort</h3>
-    <p>5-star beachfront hotel</p>
-    <a class="btn-small track" href="https://www.agoda.com/?cid=YOUR_AGODA_ID" target="_blank">View on Agoda</a>
+  <!-- Mobile Menu -->
+  <div class="mobile-menu hidden bg-white text-center py-3">
+    <a href="#home" class="block py-2">Home</a>
+    <a href="#hotels" class="block py-2">Hotels</a>
+    <a href="#about" class="block py-2">About</a>
+    <a href="#contact" class="block py-2">Contact</a>
   </div>
 
-  <div class="hotel-card animate">
-    <img src="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267?auto=format&fit=crop&w=800&q=80" alt="City Center Hotel">
-    <h3>City Center Hotel</h3>
-    <p>Perfect location for business & leisure</p>
-    <a class="btn-small track" href="https://www.agoda.com/?cid=YOUR_AGODA_ID" target="_blank">Check Price</a>
-  </div>
+  <!-- Hero -->
+  <section id="home" class="pt-24 bg-cover bg-center" style="background-image:url('https://source.unsplash.com/1600x900/?hotel,resort');">
+    <div class="h-screen flex justify-center items-center bg-black bg-opacity-40">
+      <div class="text-center text-white max-w-xl" data-aos="fade-up">
+        <h1 class="text-4xl md:text-6xl font-bold mb-4">Discover Best Hotel Deals Worldwide</h1>
+        <p class="text-lg mb-6">Book trusted hotels with Agoda & save more.</p>
+        <a href="https://www.agoda.com" target="_blank"
+           class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-lg font-medium transition">
+          Search Hotels
+        </a>
+      </div>
+    </div>
+  </section>
 
-  <div class="hotel-card animate">
-    <img src="https://images.unsplash.com/photo-1542314831-068cd1dbfeeb?auto=format&fit=crop&w=800&q=80" alt="Budget Friendly Stay">
-    <h3>Budget Friendly Stay</h3>
-    <p>Comfortable rooms at affordable prices</p>
-    <a class="btn-small track" href="https://www.agoda.com/?cid=YOUR_AGODA_ID" target="_blank">Book Now</a>
-  </div>
-</section>
+  <!-- Hotels Section -->
+  <section id="hotels" class="py-16 container mx-auto px-6">
+    <h2 class="text-3xl font-bold text-center mb-8" data-aos="fade-right">Best Price Deals</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
-<!-- CTA -->
-<div class="cta">
-  <h2>Ready to Travel?</h2>
-  <p>Book your perfect hotel today and enjoy exclusive discounts.</p>
-  <a class="btn track" href="https://www.agoda.com/?cid=YOUR_AGODA_ID" target="_blank">Find Best Hotel Deals</a>
-</div>
+      <!-- Card 1 -->
+      <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up">
+        <img src="https://source.unsplash.com/600x400/?beach,resort" class="w-full h-48 object-cover" />
+        <div class="p-6">
+          <h3 class="text-xl font-semibold mb-2">Luxury Beach Resort</h3>
+          <p class="text-gray-600 mb-4">5‑star beachfront hotel</p>
+          <a href="https://www.agoda.com" target="_blank"
+             class="text-indigo-600 font-medium hover:underline">View on Agoda</a>
+        </div>
+      </div>
 
-<footer>
-  © 2025 Hotelify | <a href="privacy.html">Privacy</a> | <a href="terms.html">Terms</a> | <a href="disclosure.html">Affiliate Disclosure</a>
-</footer>
+      <!-- Card 2 -->
+      <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="100">
+        <img src="https://source.unsplash.com/600x400/?city,hotel" class="w-full h-48 object-cover" />
+        <div class="p-6">
+          <h3 class="text-xl font-semibold mb-2">City Center Hotel</h3>
+          <p class="text-gray-600 mb-4">Perfect location for business & leisure</p>
+          <a href="https://www.agoda.com" target="_blank"
+             class="text-indigo-600 font-medium hover:underline">Check Price</a>
+        </div>
+      </div>
 
-<script src="js/main.js"></script>
+      <!-- Card 3 -->
+      <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="200">
+        <img src="https://source.unsplash.com/600x400/?budget,hotel" class="w-full h-48 object-cover" />
+        <div class="p-6">
+          <h3 class="text-xl font-semibold mb-2">Budget Friendly Stay</h3>
+          <p class="text-gray-600 mb-4">Affordable & comfortable</p>
+          <a href="https://www.agoda.com" target="_blank"
+             class="text-indigo-600 font-medium hover:underline">Book Now</a>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- About -->
+  <section id="about" class="py-16 bg-indigo-50 text-center px-6">
+    <h2 class="text-3xl font-bold mb-4" data-aos="zoom-in">About Hotelify</h2>
+    <p class="max-w-2xl mx-auto text-lg" data-aos="fade-up">
+      Hotelify helps you find the best hotel deals from trusted partners like Agoda. Enjoy worldwide coverage and verified deals at unbeatable prices.
+    </p>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="py-16 container mx-auto px-6">
+    <h2 class="text-3xl font-bold text-center mb-6" data-aos="fade-right">Contact Us</h2>
+    <form class="max-w-xl mx-auto space-y-4">
+      <input type="text" placeholder="Your Name"
+             class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-indigo-500 focus:border-indigo-500"/>
+      <input type="email" placeholder="Your Email"
+             class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-indigo-500 focus:border-indigo-500"/>
+      <textarea placeholder="Message"
+                class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-indigo-500 focus:border-indigo-500"></textarea>
+      <button type="submit"
+              class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-lg w-full">Send Message</button>
+    </form>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-gray-800 text-white text-center px-6 py-6">
+    © 2025 Hotelify | Built with ❤️
+  </footer>
+
+  <!-- AOS JS -->
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({ duration: 800, once: true });
+
+    // Mobile menu toggle
+    const btn = document.querySelector(".mobile-menu-button");
+    const menu = document.querySelector(".mobile-menu");
+    btn.addEventListener("click", () => menu.classList.toggle("hidden"));
+  </script>
 </body>
 </html>
