--- a/contact.html
+++ b/contact.html
@@ -1,2 +1,57 @@
-<h2>Contact Us</h2>
-<p>Email: support@hotelify.com</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hotelify – Contact</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
+</head>
+<body class="bg-gray-100 text-gray-800">
+
+  <!-- Navbar -->
+  <header class="bg-white shadow-md fixed w-full z-20 top-0">
+    <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+      <div class="text-2xl font-bold text-indigo-600">Hotelify</div>
+      <nav class="space-x-6 hidden md:flex">
+        <a href="index.html" class="hover:text-indigo-600">Home</a>
+        <a href="hotels.html" class="hover:text-indigo-600">Hotels</a>
+        <a href="about.html" class="hover:text-indigo-600">About</a>
+        <a href="contact.html" class="hover:text-indigo-600">Contact</a>
+      </nav>
+      <button class="md:hidden mobile-menu-button">
+        <span class="text-2xl">&#9776;</span>
+      </button>
+    </div>
+  </header>
+
+  <div class="mobile-menu hidden bg-white text-center py-3">
+    <a href="index.html" class="block py-2">Home</a>
+    <a href="hotels.html" class="block py-2">Hotels</a>
+    <a href="about.html" class="block py-2">About</a>
+    <a href="contact.html" class="block py-2">Contact</a>
+  </div>
+
+  <section class="pt-24 py-16 container mx-auto px-6 max-w-xl">
+    <h1 class="text-4xl font-bold text-center mb-8" data-aos="fade-down">Contact Us</h1>
+    <form class="space-y-4" data-aos="fade-up">
+      <input type="text" placeholder="Your Name" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-indigo-500 focus:border-indigo-500"/>
+      <input type="email" placeholder="Your Email" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-indigo-500 focus:border-indigo-500"/>
+      <textarea placeholder="Message" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-indigo-500 focus:border-indigo-500"></textarea>
+      <button type="submit" class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-lg w-full font-medium">Send Message</button>
+    </form>
+  </section>
+
+  <footer class="bg-gray-800 text-white text-center px-6 py-6">
+    © 2025 Hotelify | Built with ❤️
+  </footer>
+
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({ duration: 800, once: true });
+    const btn = document.querySelector(".mobile-menu-button");
+    const menu = document.querySelector(".mobile-menu");
+    btn.addEventListener("click", () => menu.classList.toggle("hidden"));
+  </script>
+</body>
+</html>
