--- a/index.html
+++ b/index.html
@@ -32,6 +32,51 @@
     <a href="about.html" class="block py-2">About</a>
     <a href="contact.html" class="block py-2">Contact</a>
   </div>
+  <!-- Hero -->
+<section id="home" class="pt-24 bg-cover bg-center" 
+         style="background-image:url('https://images.unsplash.com/photo-1501117716987-c8e6e3f7b424?auto=format&fit=crop&w=1600&q=80');">
+  <div class="h-screen flex justify-center items-center bg-black bg-opacity-40">
+    <div class="text-center text-white max-w-xl" data-aos="fade-up">
+      <h1 class="text-4xl md:text-6xl font-bold mb-4">Discover Best Hotel Deals Worldwide</h1>
+      <p class="text-lg mb-6">Book trusted hotels with Agoda & save more.</p>
+      <a href="hotels.html" class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-lg font-medium transition">
+        Search Hotels
+      </a>
+    </div>
+  </div>
+</section>
+
+<!-- Featured Hotels -->
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+
+  <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up">
+    <img src="https://images.unsplash.com/photo-1560347876-aeef00ee58a1?auto=format&fit=crop&w=600&q=80" class="w-full h-48 object-cover" />
+    <div class="p-6">
+      <h3 class="text-xl font-semibold mb-2">Luxury Beach Resort</h3>
+      <p class="text-gray-600 mb-4">5‑star beachfront hotel</p>
+      <a href="hotels.html" class="text-indigo-600 font-medium hover:underline">View Hotels</a>
+    </div>
+  </div>
+
+  <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="100">
+    <img src="https://images.unsplash.com/photo-1501117716987-3f8b241a07c5?auto=format&fit=crop&w=600&q=80" class="w-full h-48 object-cover" />
+    <div class="p-6">
+      <h3 class="text-xl font-semibold mb-2">City Center Hotel</h3>
+      <p class="text-gray-600 mb-4">Perfect location for business & leisure</p>
+      <a href="hotels.html" class="text-indigo-600 font-medium hover:underline">View Hotels</a>
+    </div>
+  </div>
+
+  <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="200">
+    <img src="https://images.unsplash.com/photo-1582719478121-5c3f6e6160f6?auto=format&fit=crop&w=600&q=80" class="w-full h-48 object-cover" />
+    <div class="p-6">
+      <h3 class="text-xl font-semibold mb-2">Budget Friendly Stay</h3>
+      <p class="text-gray-600 mb-4">Affordable & comfortable</p>
+      <a href="hotels.html" class="text-indigo-600 font-medium hover:underline">View Hotels</a>
+    </div>
+  </div>
+
+</div>
 
   <!-- Hero -->
   <section id="home" class="pt-24 bg-cover bg-center" style="background-image:url('https://source.unsplash.com/1600x900/?hotel,resort');">
