--- a/hotels.html
+++ b/hotels.html
@@ -25,6 +25,15 @@
     </div>
   </header>
 
+  <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up">
+  <img src="https://images.unsplash.com/photo-1560347876-aeef00ee58a1?auto=format&fit=crop&w=600&q=80" class="w-full h-48 object-cover" />
+  <div class="p-6">
+    <h3 class="text-xl font-semibold mb-2">Luxury Beach Resort</h3>
+    <p class="text-gray-600 mb-4">5‑star beachfront hotel</p>
+    <a href="https://www.agoda.com" target="_blank" class="text-indigo-600 font-medium hover:underline">Book on Agoda</a>
+  </div>
+  </div>
+
   <div class="mobile-menu hidden bg-white text-center py-3">
     <a href="index.html" class="block py-2">Home</a>
     <a href="hotels.html" class="block py-2">Hotels</a>
