--- a/hotels.html
+++ b/hotels.html
@@ -56,6 +56,17 @@
         </div>
       </div>
 
+      <section class="pt-24 py-16 container mx-auto px-6 text-center relative">
+  <div class="absolute inset-0 bg-cover bg-center opacity-10" 
+       style="background-image:url('https://images.unsplash.com/photo-1519821172141-b9d07b73c8c7?auto=format&fit=crop&w=1600&q=80');"></div>
+  <div class="relative z-10">
+    <h1 class="text-4xl font-bold mb-8" data-aos="fade-down">About Hotelify</h1>
+    <p class="max-w-3xl mx-auto text-lg mb-6" data-aos="fade-up">
+      Hotelify helps travelers discover the best hotel deals worldwide...
+    </p>
+  </div>
+      </section>
+
       <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="100">
         <img src="https://source.unsplash.com/600x400/?city,hotel" class="w-full h-48 object-cover" />
         <div class="p-6">
