--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,19 @@
       <button type="submit" class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-lg w-full font-medium">Send Message</button>
     </form>
   </section>
+  <section class="pt-24 py-16 container mx-auto px-6 max-w-xl relative">
+  <div class="absolute inset-0 bg-cover bg-center opacity-5" 
+       style="background-image:url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1600&q=80');"></div>
+  <div class="relative z-10">
+    <h1 class="text-4xl font-bold text-center mb-8" data-aos="fade-down">Contact Us</h1>
+    <form class="space-y-4" data-aos="fade-up">
+      <input type="text" placeholder="Your Name" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-indigo-500 focus:border-indigo-500"/>
+      <input type="email" placeholder="Your Email" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-indigo-500 focus:border-indigo-500"/>
+      <textarea placeholder="Message" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-indigo-500 focus:border-indigo-500"></textarea>
+      <button type="submit" class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-lg w-full font-medium">Send Message</button>
+    </form>
+  </div>
+  </section>
 
   <footer class="bg-gray-800 text-white text-center px-6 py-6">
     © 2025 Hotelify | Built with ❤️
