--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
   <!-- Hero -->
 <section id="home" class="pt-24 bg-cover bg-center" 
-         style="background-image:url('https://unsplash.com/photos/aerial-photo-of-buildings-during-dusk-boLgiM0qwkg?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink');">
+         style="background-image:url('https://unsplash.com/photos/aerial-photo-of-buildings-during-dusk-boLgiM0qwkg');">
   <div class="h-screen flex justify-center items-center bg-black bg-opacity-40">
     <div class="text-center text-white max-w-xl" data-aos="fade-up">
       <h1 class="text-4xl md:text-6xl font-bold mb-4">Discover Best Hotel Deals Worldwide</h1>
