--- a/hotels.html
+++ b/hotels.html
@@ -40,6 +40,36 @@
     <a href="about.html" class="block py-2">About</a>
     <a href="contact.html" class="block py-2">Contact</a>
   </div>
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+
+  <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up">
+    <img src="https://images.unsplash.com/photo-1560347876-aeef00ee58a1?auto=format&fit=crop&w=600&q=80" class="w-full h-48 object-cover" alt="Luxury Beach Resort"/>
+    <div class="p-6">
+      <h3 class="text-xl font-semibold mb-2">Luxury Beach Resort</h3>
+      <p class="text-gray-600 mb-4">5‑star beachfront hotel</p>
+      <a href="https://www.agoda.com" target="_blank" class="text-indigo-600 font-medium hover:underline">Book on Agoda</a>
+    </div>
+  </div>
+
+  <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="100">
+    <img src="https://images.unsplash.com/photo-1501117716987-3f8b241a07c5?auto=format&fit=crop&w=600&q=80" class="w-full h-48 object-cover" alt="City Center Hotel"/>
+    <div class="p-6">
+      <h3 class="text-xl font-semibold mb-2">City Center Hotel</h3>
+      <p class="text-gray-600 mb-4">Perfect location for business & leisure</p>
+      <a href="https://www.agoda.com" target="_blank" class="text-indigo-600 font-medium hover:underline">Book on Agoda</a>
+    </div>
+  </div>
+
+  <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="200">
+    <img src="https://images.unsplash.com/photo-1582719478121-5c3f6e6160f6?auto=format&fit=crop&w=600&q=80" class="w-full h-48 object-cover" alt="Budget Friendly Stay"/>
+    <div class="p-6">
+      <h3 class="text-xl font-semibold mb-2">Budget Friendly Stay</h3>
+      <p class="text-gray-600 mb-4">Affordable & comfortable</p>
+      <a href="https://www.agoda.com" target="_blank" class="text-indigo-600 font-medium hover:underline">Book on Agoda</a>
+    </div>
+  </div>
+
+  </div>
 
   <!-- Hotels Page -->
   <section class="pt-24 py-16 container mx-auto px-6">
