--- a/index.html
+++ b/index.html
@@ -3,106 +3,107 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Hotelify - Luxury Scroll</title>
+<title>Hotelify - Blue Luxury Scroll</title>
 
-<!-- AOS library for scroll animations -->
+<!-- AOS library -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
 
 <style>
-  /* ===== Reset & Base ===== */
-  * { margin:0; padding:0; box-sizing:border-box; }
-  html { scroll-behavior: smooth; font-family: Arial, sans-serif; }
-  body { scroll-snap-type: y mandatory; overflow-y: scroll; }
-  a { text-decoration: none; color: inherit; }
-  .container { width: 90%; margin: auto; max-width: 1200px; }
+/* ===== Reset & Base ===== */
+* { margin:0; padding:0; box-sizing:border-box; }
+html { scroll-behavior: smooth; font-family: Arial, sans-serif; }
+body { scroll-snap-type: y mandatory; overflow-y: scroll; background:#e6f0fa; }
+a { text-decoration: none; color: inherit; }
+.container { width: 90%; margin: auto; max-width: 1200px; }
 
-  /* ===== Navbar ===== */
-  header { position: fixed; top:0; width:100%; background: rgba(255,255,255,0.95); z-index:1000; box-shadow:0 2px 8px rgba(0,0,0,0.1); backdrop-filter: blur(5px); }
-  .navbar { display: flex; justify-content: space-between; align-items: center; padding: 1rem 0; }
-  .nav-links { list-style: none; display: flex; gap: 1rem; }
-  .nav-links a { padding: 0.5rem 1rem; transition: 0.3s; }
-  .nav-links a:hover { color: #0077cc; }
-  .nav-toggle { display: none; font-size: 1.5rem; background: none; border: none; cursor:pointer; }
+/* ===== Navbar ===== */
+header { position: fixed; top:0; width:100%; background: rgba(255,255,255,0.95); z-index:1000; box-shadow:0 2px 8px rgba(0,0,0,0.1); backdrop-filter: blur(5px); }
+.navbar { display: flex; justify-content: space-between; align-items: center; padding: 1rem 0; }
+.nav-links { list-style: none; display: flex; gap: 1rem; }
+.nav-links a { padding: 0.5rem 1rem; transition: 0.3s; color:#003366; font-weight:500; }
+.nav-links a:hover { color: #0055aa; }
+.nav-toggle { display: none; font-size: 1.5rem; background: none; border: none; cursor:pointer; }
 
-  /* ===== Section Snap ===== */
-  section { height:100vh; scroll-snap-align:start; display:flex; justify-content:center; align-items:center; position:relative; }
-  
-  /* ===== Hero Section ===== */
-  .hero {
-    color:#fff;
-    text-align:center;
-    overflow:hidden;
-  }
-  .hero::before {
-    content:"";
-    position:absolute; top:0; left:0; width:100%; height:100%;
-    background: url('https://source.unsplash.com/1600x900/?hotel,resort') center/cover no-repeat;
-    animation: heroSlide 20s linear infinite alternate;
-    z-index:-3;
-    filter: brightness(0.5);
-  }
-  .hero::after {
-    content:"";
-    position:absolute; top:0; left:0; width:100%; height:100%;
-    background: linear-gradient(135deg, rgba(0,119,204,0.5), rgba(0,204,204,0.3));
-    z-index:-2;
-  }
-  @keyframes heroSlide {
-    0% { transform: scale(1) translateX(0); }
-    50% { transform: scale(1.05) translateX(-20px); }
-    100% { transform: scale(1) translateX(0); }
-  }
+/* ===== Floating Section Dots ===== */
+.section-dots {
+  position: fixed; right: 20px; top: 50%; transform: translateY(-50%); z-index: 1000; display:flex; flex-direction: column; gap:12px;
+}
+.section-dots button {
+  width:12px; height:12px; border-radius:50%; border:none; background: rgba(0,102,204,0.5); cursor:pointer; transition:0.3s;
+}
+.section-dots button.active { background:#003366; }
 
-  /* Floating bubbles */
-  .bubble { position: absolute; border-radius: 50%; opacity: 0.5; animation: float 6s ease-in-out infinite; background: rgba(255,255,255,0.2); z-index:-1; }
-  @keyframes float { 0%{transform:translateY(0) scale(1);} 50%{transform:translateY(-30px) scale(1.1);} 100%{transform:translateY(0) scale(1);} }
+/* ===== Section Snap ===== */
+section { height:100vh; scroll-snap-align:start; display:flex; justify-content:center; align-items:center; position:relative; opacity:0; transform:translateY(50px); transition: all 1s ease; }
 
-  /* Particle canvas */
-  #particles { position:absolute; top:0; left:0; width:100%; height:100%; z-index:-1; pointer-events:none; }
+/* ===== Hero Section ===== */
+.hero { color:#fff; text-align:center; overflow:hidden; }
+.hero::before {
+  content:""; position:absolute; top:0; left:0; width:100%; height:100%;
+  background: url('https://source.unsplash.com/1600x900/?hotel,blue') center/cover no-repeat;
+  animation: heroSlide 20s linear infinite alternate; z-index:-3; filter: brightness(0.5);
+}
+.hero::after {
+  content:""; position:absolute; top:0; left:0; width:100%; height:100%;
+  background: linear-gradient(135deg, rgba(0,102,204,0.5), rgba(0,153,255,0.3)); z-index:-2;
+}
+@keyframes heroSlide {
+  0% { transform: scale(1) translateX(0); }
+  50% { transform: scale(1.05) translateX(-20px); }
+  100% { transform: scale(1) translateX(0); }
+}
 
-  .hero-content { position: relative; z-index:1; }
-  .hero-content h1 { font-size: 3rem; margin-bottom:1rem; }
-  .hero-content p { font-size: 1.2rem; margin-bottom: 1.5rem; }
-  .btn { background: #0077cc; color: #fff; padding: 0.8rem 1.5rem; border:none; cursor:pointer; font-size: 1rem; border-radius:5px; transition:0.3s; }
-  .btn:hover { background:#005fa3; }
-  .btn-pulse { animation: pulse 2s infinite; }
-  @keyframes pulse { 0%{transform:scale(1);} 50%{transform:scale(1.08);} 100%{transform:scale(1);} }
-  .dynamic-text { color:#FFD700; font-weight:bold; }
+/* Floating bubbles */
+.bubble { position: absolute; border-radius: 50%; opacity: 0.5; animation: float 6s ease-in-out infinite; background: rgba(0,153,255,0.2); z-index:-1; }
+@keyframes float { 0%{transform:translateY(0) scale(1);} 50%{transform:translateY(-30px) scale(1.1);} 100%{transform:translateY(0) scale(1);} }
 
-  /* Hotels Section */
-  .hotels { background:#f2f2f2; flex-direction:column; }
-  .hotel-grid { display:grid; gap:2rem; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); width:100%; max-width:1200px; margin:auto; }
-  .hotel-card { border-radius:8px; overflow:hidden; box-shadow:0 2px 12px rgba(0,0,0,0.1); text-align:center; background:#fff; transition: transform 0.3s; }
-  .hotel-card:hover { transform: translateY(-10px); }
-  .hotel-card img { width:100%; height:200px; object-fit: cover; }
-  .hotel-card h3 { margin:1rem 0 0.5rem; }
-  .hotel-card p { margin-bottom:1rem; color:#555; }
+/* Particle canvas */
+#particles { position:absolute; top:0; left:0; width:100%; height:100%; z-index:-1; pointer-events:none; }
 
-  /* About Section */
-  .about { background:#e6f7ff; flex-direction:column; }
-  .about p { text-align:center; max-width:800px; margin:auto; color:#555; line-height:1.6; }
+/* Hero content */
+.hero-content { position: relative; z-index:1; }
+.hero-content h1 { font-size: 3rem; margin-bottom:1rem; }
+.hero-content p { font-size: 1.2rem; margin-bottom: 1.5rem; }
+.btn { background: #003366; color: #fff; padding: 0.8rem 1.5rem; border:none; cursor:pointer; font-size: 1rem; border-radius:5px; transition:0.3s; }
+.btn:hover { background:#0055aa; }
+.btn-pulse { animation: pulse 2s infinite; }
+@keyframes pulse { 0%{transform:scale(1);} 50%{transform:scale(1.08);} 100%{transform:scale(1);} }
+.dynamic-text { color:#66ccff; font-weight:bold; }
 
-  /* Contact Section */
-  .contact { background:#f9f9f9; flex-direction:column; }
-  .contact form { display:flex; flex-direction: column; gap:1rem; max-width:600px; margin:auto; }
-  .contact input, .contact textarea { padding:0.8rem; border:1px solid #ccc; border-radius:4px; width:100%; }
-  .contact textarea { resize: vertical; min-height:120px; }
+/* Hotels Section */
+.hotels { background:#cce0ff; flex-direction:column; }
+.hotel-grid { display:grid; gap:2rem; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); width:100%; max-width:1200px; margin:auto; }
+.hotel-card { border-radius:8px; overflow:hidden; box-shadow:0 2px 12px rgba(0,0,0,0.1); text-align:center; background:#e6f0fa; transition: transform 0.3s; }
+.hotel-card:hover { transform: translateY(-10px); }
+.hotel-card img { width:100%; height:200px; object-fit: cover; }
+.hotel-card h3 { margin:1rem 0 0.5rem; color:#003366; }
+.hotel-card p { margin-bottom:1rem; color:#0055aa; }
 
-  footer { text-align:center; padding:1rem; background:#d9d9d9; color:#555; }
+/* About Section */
+.about { background:#99c2ff; flex-direction:column; }
+.about p { text-align:center; max-width:800px; margin:auto; color:#003366; line-height:1.6; }
 
-  @media(max-width:768px){
-    .nav-toggle { display:block; }
-    .nav-links { display:none; flex-direction: column; gap:0; background:#fff; position:absolute; top:100%; right:0; width:200px; box-shadow:0 2px 8px rgba(0,0,0,0.1); }
-    .nav-links.show { display:flex; }
-    .nav-links a { padding:1rem; border-bottom:1px solid #eee; }
-  }
+/* Contact Section */
+.contact { background:#66a3ff; flex-direction:column; }
+.contact form { display:flex; flex-direction: column; gap:1rem; max-width:600px; margin:auto; }
+.contact input, .contact textarea { padding:0.8rem; border:1px solid #003366; border-radius:4px; width:100%; }
+.contact textarea { resize: vertical; min-height:120px; }
+
+footer { text-align:center; padding:1rem; background:#003366; color:#fff; }
+
+@media(max-width:768px){
+  .nav-toggle { display:block; }
+  .nav-links { display:none; flex-direction: column; gap:0; background:#fff; position:absolute; top:100%; right:0; width:200px; box-shadow:0 2px 8px rgba(0,0,0,0.1); }
+  .nav-links.show { display:flex; }
+  .nav-links a { padding:1rem; border-bottom:1px solid #eee; }
+}
 </style>
 </head>
 <body>
 
 <header>
   <div class="container navbar">
-    <a href="#" class="logo">Hotelify</a>
+    <a href="#" class="logo" style="color:#003366; font-weight:bold;">Hotelify</a>
     <ul class="nav-links">
       <li><a href="#hero">Home</a></li>
       <li><a href="#hotels">Hotels</a></li>
@@ -112,6 +113,14 @@
     <button class="nav-toggle">☰</button>
   </div>
 </header>
+
+<!-- Floating Navigation Dots -->
+<div class="section-dots">
+  <button data-target="hero" class="active"></button>
+  <button data-target="hotels"></button>
+  <button data-target="about"></button>
+  <button data-target="contact"></button>
+</div>
 
 <!-- Hero -->
 <section id="hero" class="hero">
@@ -132,17 +141,17 @@
   <h2 data-aos="fade-down">Featured Hotels</h2>
   <div class="hotel-grid">
     <div class="hotel-card" data-aos="fade-up">
-      <img src="https://source.unsplash.com/400x300/?hotel,beach" alt="Luxury Beach Resort">
+      <img src="https://source.unsplash.com/400x300/?hotel,beach,blue" alt="Luxury Beach Resort">
       <h3>Luxury Beach Resort</h3>
       <p>5‑star beachfront hotel</p>
     </div>
     <div class="hotel-card" data-aos="fade-up" data-aos-delay="100">
-      <img src="https://source.unsplash.com/400x300/?hotel,city" alt="City Center Hotel">
+      <img src="https://source.unsplash.com/400x300/?hotel,city,blue" alt="City Center Hotel">
       <h3>City Center Hotel</h3>
       <p>Perfect location for business & leisure</p>
     </div>
     <div class="hotel-card" data-aos="fade-up" data-aos-delay="200">
-      <img src="https://source.unsplash.com/400x300/?hotel,budget" alt="Budget Friendly Stay">
+      <img src="https://source.unsplash.com/400x300/?hotel,budget,blue" alt="Budget Friendly Stay">
       <h3>Budget Friendly Stay</h3>
       <p>Affordable & comfortable</p>
     </div>
@@ -172,37 +181,56 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 <script>
-  // Navbar toggle
-  const toggle = document.querySelector('.nav-toggle');
-  const navLinks = document.querySelector('.nav-links');
-  toggle.addEventListener('click', () => navLinks.classList.toggle('show'));
+// Navbar toggle
+const toggle = document.querySelector('.nav-toggle');
+const navLinks = document.querySelector('.nav-links');
+toggle.addEventListener('click', () => navLinks.classList.toggle('show'));
 
-  // AOS animations
-  AOS.init({ duration: 800, once: true });
+// AOS
+AOS.init({ duration: 1000, once: true });
 
-  // Hero dynamic text
-  const phrases = ["Best Hotel Deals Worldwide", "Luxury Stays for Every Traveler", "Affordable Hotels Anywhere", "Book Your Dream Vacation"];
-  const dynamicText = document.querySelector('.dynamic-text');
-  let i = 0;
-  setInterval(() => { i = (i+1) % phrases.length; dynamicText.textContent = phrases[i]; }, 3000);
+// Dynamic hero text
+const phrases = ["Best Hotel Deals Worldwide","Luxury Stays for Every Traveler","Affordable Hotels Anywhere","Book Your Dream Vacation"];
+const dynamicText = document.querySelector('.dynamic-text');
+let i=0;
+setInterval(()=>{ i=(i+1)%phrases.length; dynamicText.textContent=phrases[i]; },3000);
 
-  // Particle background
-  const canvas = document.getElementById('particles');
-  const ctx = canvas.getContext('2d');
-  let particles = [];
-  function resizeCanvas() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
-  window.addEventListener('resize', resizeCanvas);
-  resizeCanvas();
-  for(let j=0;j<100;j++){
-    particles.push({x:Math.random()*canvas.width, y:Math.random()*canvas.height, r:Math.random()*2+1, dx:(Math.random()-0.5)*0.5, dy:(Math.random()-0.5)*0.5});
-  }
-  function animate(){ ctx.clearRect(0,0,canvas.width,canvas.height);
-    particles.forEach(p=>{ ctx.beginPath(); ctx.arc(p.x,p.y,p.r,0,Math.PI*2); ctx.fillStyle='rgba(255,255,255,0.3)'; ctx.fill();
-    p.x+=p.dx; p.y+=p.dy; if(p.x>canvas.width)p.x=0; if(p.x<0)p.x=canvas.width; if(p.y>canvas.height)p.y=0; if(p.y<0)p.y=canvas.height; });
-    requestAnimationFrame(animate);
-  }
-  animate();
+// Particle background
+const canvas=document.getElementById('particles');
+const ctx=canvas.getContext('2d');
+let particles=[];
+function resizeCanvas(){canvas.width=window.innerWidth;canvas.height=window.innerHeight;}
+window.addEventListener('resize',resizeCanvas);
+resizeCanvas();
+for(let j=0;j<100;j++){particles.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,r:Math.random()*2+1,dx:(Math.random()-0.5)*0.5,dy:(Math.random()-0.5)*0.5});}
+function animate(){ctx.clearRect(0,0,canvas.width,canvas.height);particles.forEach(p=>{ctx.beginPath();ctx.arc(p.x,p.y,p.r,0,Math.PI*2);ctx.fillStyle='rgba(0,153,255,0.3)';ctx.fill();p.x+=p.dx;p.y+=p.dy;if(p.x>canvas.width)p.x=0;if(p.x<0)p.x=canvas.width;if(p.y>canvas.height)p.y=0;if(p.y<0)p.y=canvas.height;});requestAnimationFrame(animate);}
+animate();
+
+// Floating nav dots
+const sections = document.querySelectorAll('section');
+const dots = document.querySelectorAll('.section-dots button');
+function setActiveDot(){
+  let index = Array.from(sections).findIndex(section=>{
+    const rect = section.getBoundingClientRect();
+    return rect.top <= window.innerHeight/2 && rect.bottom >= window.innerHeight/2;
+  });
+  dots.forEach(dot=>dot.classList.remove('active'));
+  if(index>=0) dots[index].classList.add('active');
+}
+window.addEventListener('scroll', setActiveDot);
+setActiveDot();
+dots.forEach(dot=>{dot.addEventListener('click', ()=> { document.getElementById(dot.dataset.target).scrollIntoView({behavior:'smooth'}); }); });
+
+// Section fade/slide animation
+const observer = new IntersectionObserver(entries=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){
+      entry.target.style.opacity='1';
+      entry.target.style.transform='translateY(0)';
+    }
+  });
+},{ threshold:0.3 });
+sections.forEach(section=>observer.observe(section));
 </script>
-
 </body>
 </html>
