--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Hotelify - Blue Luxury Scroll</title>
+<title>Hotelify - Blue Luxury Glow</title>
 
 <!-- AOS library -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
@@ -62,13 +62,20 @@ section { height:100vh; scroll-snap-align:start; display:flex; justify-content:c
 
 /* Hero content */
 .hero-content { position: relative; z-index:1; }
-.hero-content h1 { font-size: 3rem; margin-bottom:1rem; }
-.hero-content p { font-size: 1.2rem; margin-bottom: 1.5rem; }
+.hero-content h1 { font-size: 3rem; margin-bottom:1rem; background: linear-gradient(90deg, #66ccff, #003366, #3399ff); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; }
+.hero-content p { font-size: 1.2rem; margin-bottom: 1.5rem; color:#cce6ff; }
 .btn { background: #003366; color: #fff; padding: 0.8rem 1.5rem; border:none; cursor:pointer; font-size: 1rem; border-radius:5px; transition:0.3s; }
 .btn:hover { background:#0055aa; }
 .btn-pulse { animation: pulse 2s infinite; }
 @keyframes pulse { 0%{transform:scale(1);} 50%{transform:scale(1.08);} 100%{transform:scale(1);} }
-.dynamic-text { color:#66ccff; font-weight:bold; }
+
+/* Gradient text glow */
+@keyframes textGlow {
+  0% { background-position:0% 50%; }
+  50% { background-position:100% 50%; }
+  100% { background-position:0% 50%; }
+}
+.dynamic-text { background: linear-gradient(90deg, #66ccff, #3399ff, #003366); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; font-weight:bold; }
 
 /* Hotels Section */
 .hotels { background:#cce0ff; flex-direction:column; }
@@ -76,15 +83,17 @@ section { height:100vh; scroll-snap-align:start; display:flex; justify-content:c
 .hotel-card { border-radius:8px; overflow:hidden; box-shadow:0 2px 12px rgba(0,0,0,0.1); text-align:center; background:#e6f0fa; transition: transform 0.3s; }
 .hotel-card:hover { transform: translateY(-10px); }
 .hotel-card img { width:100%; height:200px; object-fit: cover; }
-.hotel-card h3 { margin:1rem 0 0.5rem; color:#003366; }
+.hotel-card h3 { margin:1rem 0 0.5rem; color:#003366; background: linear-gradient(90deg, #66ccff, #003366); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; }
 .hotel-card p { margin-bottom:1rem; color:#0055aa; }
 
 /* About Section */
 .about { background:#99c2ff; flex-direction:column; }
+.about h2 { background: linear-gradient(90deg, #66ccff, #003366); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; }
 .about p { text-align:center; max-width:800px; margin:auto; color:#003366; line-height:1.6; }
 
 /* Contact Section */
 .contact { background:#66a3ff; flex-direction:column; }
+.contact h2 { background: linear-gradient(90deg, #66ccff, #003366); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; }
 .contact form { display:flex; flex-direction: column; gap:1rem; max-width:600px; margin:auto; }
 .contact input, .contact textarea { padding:0.8rem; border:1px solid #003366; border-radius:4px; width:100%; }
 .contact textarea { resize: vertical; min-height:120px; }
